# warmdesk

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  Makefile  README.md  TODO.md  coworker-migrate.yaml.example  coworker.yaml.example  warmdesk-migrate.yaml.example  warmdesk.yaml.example  what.md
.claude/commands/: release.md
.github/workflows/: build-client-linux.yml  build-client-macos.yml  build-client-windows.yml  build-desktop.yml  build-linux.yml  build-macos.yml  build-server.yml  build-windows.yml  release.yml
backend/: go.mod  go.sum  main.go
backend/config/: config.go
backend/database/: database.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/handlers/: admin_project.go  admin_user_projects.go  api_key.go  attachment.go  auth.go  card.go  card_assignee.go  card_comment.go  card_link.go  card_watcher.go  chat.go  checklist.go  column.go  conversation.go  direct_message.go  favorite_user.go  gitea_webhook.go  github_webhook.go  gitlab_webhook.go  label.go  notifications.go  presence.go  project.go  project_member.go  reaction.go  report.go  search.go  starred.go  system.go  tag.go  ticket_api.go  topic.go  user.go  version.go  webhook.go  websocket.go
deploy/: apache.conf  coworker.service  nginx.conf  warmdesk.desktop  warmdesk.service
docs/: admin-guide.md  api.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+92 files in other folders)
