[package]
name = "warmdesk"
version = "0.4.5"
edition = "2021"

[lib]
name = "warmdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls", "charset", "macos-system-configuration", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
